--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,14 @@ dependencies {
     testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+
+    runtimeOnly("org.springframework.modulith:spring-modulith-starter-insight")
+
+    testImplementation("org.springframework.modulith:spring-modulith-starter-test")
+    // (patients-infra)
+    implementation "org.mapstruct:mapstruct:1.5.5.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
 }
 
 dependencyManagement {
