--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 
+    implementation 'io.github.cdimascio:dotenv-java:3.2.0'
+
     runtimeOnly("org.springframework.modulith:spring-modulith-starter-insight")
 
     testImplementation("org.springframework.modulith:spring-modulith-starter-test")
