--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
+    implementation "org.springframework.boot:spring-boot-starter-jdbc"
 
     implementation 'io.github.cdimascio:dotenv-java:3.2.0'
 
