--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ logging.level.com.zaxxer.hikari=DEBUG
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=ERROR
+
